tests/resource/valid/definition/function_with_match.mamba
def f(x: Int) -> Int =>
    match x
        2 => 3
        4 => 30
        _ => 300
