tests/resource/invalid/type/function/function_with_stmt_body.mamba
def f(x: Int) -> Int => print(x)
